# karp

./: .envrc  Cargo.toml  README.md  clippy.toml  flake.lock.license  flake.nix
.reuse/: dep5
src/: api.rs  client.rs  error.rs  main.rs  manager.rs  message.rs  metadata.rs  password.rs  rng.rs  session.rs  srp.rs  storage.rs
src/command/: get_form_fields.rs  mod.rs  search.rs
src/keepass/: api.rs  error.rs  manager.rs  message.rs  mod.rs  session.rs  srp.rs
src/keepass/model/: encrypted_json.rs  hash.rs  jsonrpc.rs  key_material.rs  mod.rs  setup.rs
src/keepassxc/: api.rs  error.rs  manager.rs  message.rs  mod.rs  session.rs
src/keepassxc/model/: encrypted_json.rs  key_material.rs  mod.rs
src/model/: encrypted_json.rs  hash.rs  jsonrpc.rs  key_material.rs  mod.rs  setup.rs
src/storage/: file.rs  keychain.rs  memory.rs  mod.rs  secret_service.rs
